test/classes/initializers/error-initializer-return-type.good
error-initializer-return-type.chpl:4: error: initializers may not declare a return type
