test/classes/initializers/error-initializer-return-type.chpl
// Modified from
// test/classes/constructors/error-constructor-return-type.chpl

class C {
}

proc C.init() : C {

}
